Grammatical update in instructions and fixed bootstrap scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,7 @@ h3 {
 .winsLosses {
     margin-bottom: 30px;
 }
+
+.container-fluid {
+    padding:0;
+}
